--- a/views/include/form.ejs
+++ b/views/include/form.ejs
@@ -223,7 +223,8 @@
             name="email"
             pattern=".+@ucdavis\.edu"
           /><small class="text-muted form-text"
-            >We'll never share your email with anyone else.</small
+            >This must be an @ucdavis.edu email. We'll never share your email
+            with anyone else.</small
           >
         </div>
       </div>
