--- a/views/include/header.ejs
+++ b/views/include/header.ejs
@@ -6,13 +6,11 @@
   is-demo
 >
   <ucd-theme-primary-nav>
-    <ul link-text="Books" href="#">
-      <li><a href="#">Biographies</a></li>
+    <ul link-text="Forms" href="#">
+      <li><a href="/carrels">Carrels</a></li>
       <li><a href="#">Fantasy</a></li>
       <li><a href="#">Mystery</a></li>
     </ul>
-    <a href="#">Magazines</a>
-    <a href="#">Journals</a>
   </ucd-theme-primary-nav>
 
   <ucd-theme-search-popup>
