--- a/views/css/shim.css
+++ b/views/css/shim.css
@@ -17,3 +17,12 @@
 .pt-2 {
   padding-top: 2rem;
 }
+input:disabled {
+  box-shadow: none;
+  cursor: not-allowed;
+  opacity: 0.3;
+  pointer-events: none;
+}
+#carrel {
+  width: 5.5rem;
+}
