--- a/views/index.ejs
+++ b/views/index.ejs
@@ -4,7 +4,12 @@
     <%- include('include/head'); %>
   </head>
   <body>
-    <%- include('include/header'); %> <%- include('include/intro'); %> <%-
-    include('include/form'); %> <%- include('include/footer'); %>
+    <%- include('include/header'); %>
+    <div class="l-container">
+      <h2>Welcome to the forms App</h2>
+      <p></p>
+    </div>
+
+    <%- include('include/footer'); %>
   </body>
 </html>
