--- a/views/include/form.ejs
+++ b/views/include/form.ejs
@@ -2,7 +2,7 @@
   <form
     id="contact-form"
     method="POST"
-    action="/"
+    action="/carrels"
     enctype="multipart/form-data"
   >
     <fieldset>
@@ -66,7 +66,7 @@
               id="ucdid"
               class="form-control"
               name="ucdid"
-              minlength="9"
+              minlength="8"
               maxlength="9"
             /><small class="text-muted form-text"
               >Please include all 9 digits</small
