--- a/views/include/header.ejs
+++ b/views/include/header.ejs
@@ -1,6 +1,6 @@
 <ucd-theme-header
   site-name="UC Davis Library"
-  slogan="Shields Carrel Request Form"
+  slogan="Library Forms"
   figure-src="/views/img/book-logo.png"
   prevent-fixed
   is-demo
