--- a/views/carrels.ejs
+++ b/views/carrels.ejs
@@ -4,7 +4,7 @@
     <%- include('include/head'); %>
   </head>
   <body>
-    <%- include('include/header'); %> <%- include('include/intro'); %> <%-
+    <%- include('include/header'); %> <%- include('include/carrelintro'); %> <%-
     include('include/form'); %> <%- include('include/footer'); %>
   </body>
 </html>
