--- a/views/include/header.ejs
+++ b/views/include/header.ejs
@@ -6,10 +6,8 @@
   is-demo
 >
   <ucd-theme-primary-nav>
-    <ul link-text="Forms" href="#">
+    <ul link-text="Forms" href="/">
       <li><a href="/carrels">Carrels</a></li>
-      <li><a href="#">Fantasy</a></li>
-      <li><a href="#">Mystery</a></li>
     </ul>
   </ucd-theme-primary-nav>
 
