--- a/views/index.ejs
+++ b/views/index.ejs
@@ -5,9 +5,12 @@
   </head>
   <body>
     <%- include('include/header'); %>
-    <div class="l-container">
+    <div class="l-container pt-2">
       <h2>Welcome to the forms App</h2>
-      <p></p>
+      <p>Here are the forms:</p>
+      <ul>
+        <li><a href="/carrels">Carrel Request Form</a></li>
+      </ul>
     </div>
 
     <%- include('include/footer'); %>
