Add locker request

--- a/views/include/head.ejs
+++ b/views/include/head.ejs
@@ -3,7 +3,7 @@
 <link rel="icon" href="/views/img/favicon-32x32.png" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <meta name="theme-color" content="#000000" />
-<meta name="description" content="Shields Carrel Request Form" />
+<meta name="description" content="<%= title %>" />
 <link
   rel="stylesheet"
   href="https://brand.library.ucdavis.edu/css/style-ucdlib.css"
@@ -13,4 +13,4 @@
 <script src="https://brand.library.ucdavis.edu/js/fontawesome.min.js"></script>
 <script src="https://brand.library.ucdavis.edu/js/solid.min.js"></script>
 <script src="/views/js/header.js"></script>
-<title>Shields Carrel Request Form</title>
+<title><%= title %></title>
