--- a/views/index.ejs
+++ b/views/index.ejs
@@ -10,6 +10,7 @@
       <p>Here are the forms:</p>
       <ul>
         <li><a href="/carrels">Carrel Request Form</a></li>
+        <li><a href="/lockers">Locker Request Form</a></li>
       </ul>
     </div>
 
