--- a/views/include/header.ejs
+++ b/views/include/header.ejs
@@ -8,6 +8,7 @@
   <ucd-theme-primary-nav>
     <ul link-text="Forms" href="/">
       <li><a href="/carrels">Carrels</a></li>
+      <li><a href="/digitalsign">Digital Signs</a></li>
       <li><a href="/lockers">Lockers</a></li>
     </ul>
   </ucd-theme-primary-nav>
