--- a/views/index.ejs
+++ b/views/index.ejs
@@ -11,9 +11,9 @@
       <ul>
         <li><a href="/carrels">Carrel Request Form</a></li>
         <li><a href="/lockers">Locker Request Form</a></li>
+        <li><a href="/digitalsign">Digital Sign Request Form</a></li>
       </ul>
     </div>
-
     <%- include('include/footer'); %>
   </body>
 </html>
