Digital Sign Form
Form in place - waiting on image upload situation

--- a/views/digitalsign.ejs
+++ b/views/digitalsign.ejs
@@ -5,6 +5,7 @@
   </head>
   <body>
     <%- include('include/header'); %> <%- include('include/digitalsignintro');
-    %> <%- include('include/lockersform'); %> <%- include('include/footer'); %>
+    %> <%- include('include/digitalsignform'); %> <%- include('include/footer');
+    %>
   </body>
 </html>
