--- a/views/digitalsignsent.ejs
+++ b/views/digitalsignsent.ejs
@@ -9,8 +9,8 @@
       <h2><%= mail.subject %> Sent</h2>
 
       <p>
-        Your request has been submitted. Please allow up to a week for
-        processing by our staff.
+        Your Digital Sign Request has been submitted. Please allow up to a week
+        for processing by our staff.
       </p>
 
       <hr />
@@ -22,32 +22,14 @@
       <pre><%= mail.text %></pre>
 
       <hr />
-      <h2>Reminder:</h2>
-      <h3>Locker Rules</h3>
-      <ol class="default">
-        <li>
-          All lockers are inspected regularly by Library Security Staff. Your
-          assigned library lock must remain on your locker at all times. No
-          other lock may be used to secure your locker. If the lock is lost or
-          damaged, you will be billed for the replacement cost.
-        </li>
-        <li>
-          Library materials kept in lockers must be checked out to the occupant.
-          Materials not checked out will be removed from the locker and
-          re-shelved. Library security guards inspect lockers regularly. Failure
-          to comply may result in forfeiture of the locker.
-        </li>
-        <li>
-          Lockers must be vacated at the last day of the quarter; items that
-          remain in the lockers after the deadline will be removed and placed in
-          the library lost and found.
-        </li>
-        <li>
-          <strong>NO FOOD OR DRINK IS ALLOWED IN YOUR ASSIGNED LOCKER.</strong>
-        </li>
-      </ol>
 
-      <p><a href="/lockers">Return to Form</a></p>
+      <h4>Where would you like to go now?</h4>
+      <ul>
+        <li>
+          <a href="https://www.library.ucdavis.edu/">Library Home Page</a>
+        </li>
+        <li><a href="/digitalsign">Submit another Request</a></li>
+      </ul>
     </div>
     <%- include('include/footer'); %>
   </body>
