--- a/views/index.ejs
+++ b/views/index.ejs
@@ -10,8 +10,9 @@
       <p>Here are the forms:</p>
       <ul>
         <li><a href="/carrels">Carrel Request Form</a></li>
-        <li><a href="/lockers">Locker Request Form</a></li>
+        <li><a href="/dams-projects">DAMS Projects Request Form</a></li>
         <li><a href="/digitalsign">Digital Sign Request Form</a></li>
+        <li><a href="/lockers">Locker Request Form</a></li>
       </ul>
     </div>
     <%- include('include/footer'); %>
